api/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: digitalpoints-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
